프론트단 XSS 처리, 공지사항 소스정리, insert시 유저 시퀀스 추가, 쿼리 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -93,7 +93,7 @@
                                     </div>
                                 </dd>
                             </dl>
-                            <dl>
+                            <dl data-mode="mod">
                                 <dt>작성자</dt>
                                 <dd><input type="text" id="insertUserId" readonly /></dd>
                                 <dt>작성 일시</dt>
